[major] bottom navigation menu after login + settings page

--- a/tidy/app/src/main/res/values/strings.xml
+++ b/tidy/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="Last_Name">Last Name</string>
     <string name="Email">Email Address</string>
     <string name="Space_ID">Space ID</string>
+    <string name="Sign_Out">Sign Out</string>
 </resources>
