[major] added editting and admin capabilities

--- a/tidy/app/src/main/res/values/strings.xml
+++ b/tidy/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="Email">Email Address</string>
     <string name="Space_ID">Space ID</string>
     <string name="Sign_Out">Sign Out</string>
+    <string name="Administrator">Admin</string>
 </resources>
