--- a/tidy/app/src/main/res/values/strings.xml
+++ b/tidy/app/src/main/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string name="room_view">Rooms</string>
     <string name="task_view">Tasks</string>
     <string name="settings">Settings</string>
+    <string name="clear">Clear</string>
+    <string name="update_room">Update Room</string>
+
     <string name="augmented_reality">Augmented Reality</string>
     <string name="supplies">Supplies</string>
     <string name="rooms">Rooms</string>
