--- a/tidy/wear/src/main/res/values/strings.xml
+++ b/tidy/wear/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="NotSignedIn">Open Tidy on your Phone!</string>
 </resources>
