--- a/tidy/wear/src/main/res/values/strings.xml
+++ b/tidy/wear/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="NotSignedIn">Open Tidy on your Phone!</string>
+    <string name="task_name">Task Name</string>
+    <string name="task_date">Due Date</string>
 </resources>
