--- a/tidy/app/src/main/res/values/strings.xml
+++ b/tidy/app/src/main/res/values/strings.xml
@@ -65,11 +65,14 @@
         <item>Bucket</item>
     </string-array>
 
-<!--    Admin Title-->
+    <!--    Admin Title-->
     <string name="admin_title">Admin</string>
     <string name="or">OR</string>
     <string name="create_new_space">Create a New Space</string>
     <string name="edit_existing_space">Edit an Existing Space</string>
     <string name="admin_description">Create new spaces and edit old ones.</string>
     <string name="enter_valid_id">Enter a valid SpaceID</string>
+    <string name="add_items">Add Items</string>
+    <string name="add_supplies">Add Supplies</string>
+    <string name="add_tasks">Add Tasks</string>
 </resources>
