--- a/tidy/app/src/main/res/values/strings.xml
+++ b/tidy/app/src/main/res/values/strings.xml
@@ -76,4 +76,8 @@
     <string name="add_supplies">Add Supplies</string>
     <string name="add_tasks">Add Tasks</string>
     <string name="spaceID"><u>spaceID:</u></string>
+    <string name="supply">Supply</string>
+    <string name="add_supply">Add Supply</string>
+    <string name="update_supply">Update Supply</string>
+    <string name="existing_supplies">Existing Supplies</string>
 </resources>
