--- a/tidy/app/src/main/res/values/strings.xml
+++ b/tidy/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
 
     <!-- Add tasks items -->
     <string name="task_description">Add a description for the task (optional)</string>
-    <string name="add_task">Add Task</string>
     <string name="task_name">Task name</string>
     <string name="task_complete_date">Date completed</string>
     <string name="task_user">Username</string>
@@ -75,9 +74,12 @@
     <string name="add_items">Add Items</string>
     <string name="add_supplies">Add Supplies</string>
     <string name="add_tasks">Add Tasks</string>
+    <string name="task_room">Task room</string>
     <string name="spaceID"><u>spaceID:</u></string>
     <string name="supply">Supply</string>
     <string name="add_supply">Add Supply</string>
     <string name="update_supply">Update Supply</string>
+    <string name="update_tasks">Update Tasks</string>
     <string name="existing_supplies">Existing Supplies</string>
+    <string name="existing_tasks">Existing Tasks</string>
 </resources>
