taskview only shows available rooms

--- a/tidy/app/src/main/res/values/strings.xml
+++ b/tidy/app/src/main/res/values/strings.xml
@@ -111,4 +111,5 @@
     <string name="ar_welcome">Welcome to Tidy\'s AR Feature!</string>
     <string name="ar_guide">Move around your space to get instant description and help on what needs to be done! Sleek right?</string>
     <string name="repeat_every">Repeat Every</string>
+    <string name="task_due_date_title">DUE: </string>
 </resources>
